移植槽位缓存到 Forge 1.12.2 / Port handler cache to Forge 1.12.2